fixed en passant impossible due to check case

--- a/ghess/public/templates/index.mustache
+++ b/ghess/public/templates/index.mustache
@@ -7,6 +7,17 @@
     <div id="board">
         {{{ board }}}
     </div>
+    <dialog id="promotion">
+    <form method="dialog">
+        <button id="promotionQueen">Simple queen</button>
+        <button id="promotionRook">Well rook is enough</button>
+        <button id="promotionBishop">Or let's take a bishop here</button>
+        <button id="promotionKnight">Something fancy: The Knight!</button>
+
+        <button id="promotionCancel">Cancel</button>
+        </menu>
+    </form>
+    </dialog>
 
     <script src="js/index.js"></script>
 </body>
