some refactoring of human and engine moving + castle bugfix after promotion

--- a/ghess/public/templates/index.mustache
+++ b/ghess/public/templates/index.mustache
@@ -4,9 +4,16 @@
     
 </head>
 <body>
+    <div id="playerBlack" class="playerName">
+        Brutus
+    </div>
     <div id="board">
         {{{ board }}}
     </div>
+     <div id="playerWhite" class="playerName">
+        Randall
+    </div>
+    <button id="start">Start</button>
     <dialog id="promotion">
     <form method="dialog">
         <button id="promotionQueen">Simple queen</button>
@@ -18,6 +25,9 @@
         <button id="promotionKnight">Something fancy: The Knight!</button>
         </menu>
     </form>
+    </dialog>
+    <dialog id="endDialog">
+
     </dialog>
 
     <script src="js/index.js"></script>
