--- a/ghess/public/css/index.css
+++ b/ghess/public/css/index.css
@@ -4,6 +4,15 @@
     position: relative;
 }
 
+.playerName {
+    margin-left: 100px;
+    border-bottom: 1px solid black;
+    width: 80vmin;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 1.4em;
+}
+
 .board_row {
     display: block;
 }
