brutus vs cactus match

--- a/ghess/public/templates/index.mustache
+++ b/ghess/public/templates/index.mustache
@@ -5,13 +5,13 @@
 </head>
 <body>
     <div id="playerBlack" class="playerName">
-        Brutus
+        Cactus
     </div>
     <div id="board">
         {{{ board }}}
     </div>
      <div id="playerWhite" class="playerName">
-        Randall
+        Brutus
     </div>
     <button id="start">Start</button>
     <dialog id="promotion">
